# Data-Science-Interview-bot-LLM

./: .dockerignore  .gitignore  Dockerfile  README.md  create_vector_db.py  griller.yaml  k8.yaml  pyproject.toml  utils.py  vector_database.ipynb
ansible/: bastian-playbook.yaml  playbook.yaml
st_app/: chatbot_helper.py  streamlit_app.py  utils.py
terraform/bastian/: bastian.tf  main.tf  variables.tf
terraform/cluster/: main.tf  variables.tf
vectordb_pipeline/: bastian_airflow_trigger.py  gcloud_function.py  gcloud_setup.sh  initial_qdrant_db_setup.py  update_db_airflow.py
vectordb_pipeline/ansible/: data_eng_bastian.yaml
vectordb_pipeline/initial_setup/: initial_qdrant_db_setup.py
vectordb_pipeline/terraform/: main.tf
